--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,8 @@
 
+*{
+	margin: 0;
+	padding: 0;
+}
 @font-face {
     font-family: 'Helvetica Neue Regular';
     src: url('../font/helveticaneue-thin-webfont.eot');
@@ -39,7 +43,7 @@ body{
 
 .heder{
 	width: 100%;
-	height:36px;
+	height:39px;
 	background-color: #085596;
 }
 .clearfix:after{
@@ -134,48 +138,73 @@ body{
 	margin-bottom: 35px;
 }
 .form{
-	padding-left: 140px;
+	margin-left: 140px;
+	margin-right: 142px;
+}
+
+.line{
+	width: 275px;
+    margin-bottom: 20px;
+    border: none;
+    border-top: 1px solid #999999;
+}
+.line legend{
+	/*width: 276px;*/
+	/*height: 35px;*/
+	text-align: center;
+	font-weight: bold;
+	color: #999999;
 }
 .form div{
 	margin-bottom: 17px;
-	width: 276px;
+	width: 275px;
     height: 35px;
     background-color: black;
 }
 .form div input{
-	width: 276px;
+	width: 255px;
     height: 35px;
     background-color: black;
     color: white;
-    border: 1px solid black;
+    border:none;
+    padding-left: 20px;
 }
-.form div input:hover{
+.form div input:focus{
 	background-color: #1b5288;
 	border: 1px solid #1b5288;
 	box-shadow: 0px 0px 9px 6px rgba(60,101,118,0.99);
 }
 .send{
     padding-left: 140px;
-    margin-bottom: 33px;
+    margin-bottom: 18px;
     color: white;
 }
 .submit{
-    background-image: url(../img/submit.jpg);
-	background-repeat: no-repeat;
-    width: 152px;
-    height: 36px;
+    width: 144px;
+    height: 30px;
     margin-left: 205px;
-    margin-bottom: 17px;
+    margin-bottom: 32px;
+    border: 0;
+    border-radius: 7px;
 }
 .submit input{
 	padding: 7px 16px;
-	/*visibility: hidden; */
-	opacity: 0;
+	border-radius: 7px;
+	border: 0;
+	color: white;
+	border-color: #085596;
+	background: rgba(75,156,231,0.93);
+background: -moz-linear-gradient(top, rgba(75,156,231,0.93) 0%, rgba(75,156,231,1) 0%, rgba(11,86,147,1) 73%);
+background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(75,156,231,0.93)), color-stop(0%, rgba(75,156,231,1)), color-stop(73%, rgba(11,86,147,1)));
+background: -webkit-linear-gradient(top, rgba(75,156,231,0.93) 0%, rgba(75,156,231,1) 0%, rgba(11,86,147,1) 73%);
+background: -o-linear-gradient(top, rgba(75,156,231,0.93) 0%, rgba(75,156,231,1) 0%, rgba(11,86,147,1) 73%);
+background: -ms-linear-gradient(top, rgba(75,156,231,0.93) 0%, rgba(75,156,231,1) 0%, rgba(11,86,147,1) 73%);
+background: linear-gradient(to bottom, rgba(75,156,231,0.93) 0%, rgba(75,156,231,1) 0%, rgba(11,86,147,1) 73%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4b9ce7', endColorstr='#0b5693', GradientType=0 );
+
 }
-
-
 .end{
-	margin-top: 35px;
+	margin-top: 30px;
 	padding-left: 122px;
 	color: white;
 	font-size: 12px;
